# Reversi

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardConsolePrinter.cpp  BoardConsolePrinter.h  BoardPrinter.h  CMakeLists.txt  Cell.cpp  Cell.h  CellCounter.cpp  CellCounter.h  ClassicLogic.cpp  ClassicLogic.h  Client.cpp  Client.h  Cloneable.h  Color.h  ConsolePlayer.h  ConsolePrinter.cpp  ConsolePrinter.h  Coordinate.cpp  Coordinate.h  FileReader.cpp  FileReader.h  GameFlow.cpp  GameFlow.h  GameLogic.h  HumanConsolePlayer.cpp  HumanConsolePlayer.h  HumanPlayer.cpp  HumanPlayer.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Move.cpp  Move.h  NetworkPlayer.cpp  NetworkPlayer.h  (+10 more)
tests/: AIPlayerTest.h  BoardTest.h  ClassicLogicTest.h  aIPlayer_test.cpp  board_test.cpp  classic_logic_test.cpp  coordinate_test.cpp  gtest_main.cpp
